# froura-mati

./: README.md  meson.build
schema/: com.froura.Mati.xml  meson.build
src/: main.c  mati-application.c  mati-application.h  mati-communicator.c  mati-communicator.h  mati-detector.c  mati-detector.h  mati-options.c  mati-options.h  mati-uploader.c  mati-uploader.h  meson.build
